# Journal

./: Cargo.toml  README.md  logs.json
src/: TermRender.rs  entries.rs  eventHandler.rs  main.rs
