[package]
name = "Journal"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
vte = "0.15.0"  # For escape sequence parsing
parking_lot = "0.12.4"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.47.1", features = ["io-util", "macros", "rt-multi-thread", "io-std", "time"] }
chrono = "0.4.42"
serde_json = "1.0.145"